--- a/debug/vector/vector2.html
+++ b/debug/vector/vector2.html
@@ -17,21 +17,26 @@
 		var cloudmadeUrl = 'http://{s}.tile.cloudmade.com/d4fc77ea4a63471cab2423e66626cbb6/997/256/{z}/{x}/{y}.png',
 			cloudmade = new L.TileLayer(cloudmadeUrl, {maxZoom: 18});
 
-		for (var i = 0, latlngs = [], len = route.length; i < len; i++) {
-			latlngs.push(new L.LatLng(route[i][0], route[i][1]));
-		}
-
 		var map = new L.Map('map', {layers: [cloudmade]});
 
-		map.addLayer(L.marker(latlngs[0]));
-		map.addLayer(L.marker(latlngs[len - 1]));
+		map.addLayer(L.marker(route[0]));
+		map.addLayer(L.marker(route[route.length - 1]));
 
-		var path = L.polygon([[latlngs, [[50.5, 30.5], [50.5, 40], [40, 40]]], [[20, 0], [20, 40], [0, 40]]], {renderer: L.canvas()}).addTo(map);
-		var poly = L.polyline([[[60, 30], [60, 50], [40, 50]], [[20, 50], [20, 70], [0, 70]]], {color: 'red'}).addTo(map);
+		var canvas = L.canvas();
+
+		var path = L.polygon([
+			[route, [[50.5, 30.5], [50.5, 40], [40, 40]]],
+			[[20, 0], [20, 40], [0, 40]]
+		], {renderer: canvas}).addTo(map).bindPopup('Hello Canvas');
+
+		var poly = L.polyline([
+			[[60, 30], [60, 50], [40, 50]],
+			[[20, 50], [20, 70], [0, 70]]
+		], {color: 'red'}).addTo(map).bindPopup('Hello SVG');
+
+		var circle = L.circle([35, 0], 700000, {color: 'green', renderer: canvas}).addTo(map).bindPopup('Hello Circle');
 
 		map.fitBounds(path);
-
-		path.bindPopup("Hello world");
 	</script>
 </body>
 </html>
