--- a/debug/vector/vector2.html
+++ b/debug/vector/vector2.html
@@ -36,7 +36,7 @@
 
 		var circle = L.circle([35, 0], 700000, {color: 'green', renderer: canvas}).addTo(map).bindPopup('Hello Circle');
 
-		map.fitBounds(path);
+		map.setView([36, 52], 3);
 	</script>
 </body>
 </html>
